--- a/practica2/templates/pedido/pedido.html.twig
+++ b/practica2/templates/pedido/pedido.html.twig
@@ -32,8 +32,8 @@ endblock %}
 	<script defer src="{{asset('js/Pedidos.js')}}"></script>
 	<script>
 		const productoJSON = "{{ path('productoJSON') }}";
-		const crearProducto = "{{ path('crearProducto') }}";
-		let conse = 0;
+const crearProducto = "{{ path('crearProducto') }}";
+let conse = 0;
 	</script>
 
 	<div id="app">
@@ -50,7 +50,7 @@ endblock %}
 				</div>
 				<div class="col-6">
 					<select @change="getPedidos" class="form-select" v-model="formPedidos.cliente">
-						<option selected></option>
+						<option hidden selected></option>
 						<option v-for="cliente in clientes" :value="cliente.id">
 							${cliente.nombre}</option>
 					</select>
@@ -85,8 +85,7 @@ endblock %}
 								<p>Codigo del pedido</p>
 							</div>
 							<div class="col-3">
-								<input required v-model="formPedidos.codigo" class="form-control" type="text"
-								@keypress="validarCodigo($event, 'codigo', 20)" />
+								<input required v-model="formPedidos.codigo" class="form-control" type="text" @keypress="validarCodigo($event, 'codigo', 20)"/>
 							</div>
 
 
@@ -94,7 +93,7 @@ endblock %}
 								<p>Municipio</p>
 							</div>
 							<div class="col-3">
-								<select @change="cambioDepartamento"  required class="form-select" v-model="formPedidos.departamento">
+								<select @change="cambioDepartamento" required class="form-select" v-model="formPedidos.departamento">
 									<option hidden selected></option>
 									<option v-for="departamento in departamentos">
 										${departamento.nombre}</option>
@@ -133,14 +132,18 @@ endblock %}
 									<tr>
 										<td>
 											<select required @change="precioProducto()" class="form-select" v-model="formPedidos.productoSeleccionado">
-												<option hidden selected   value=""></option>
-												<option  v-for="producto in productosSeleccionados" :value="producto">
+												<option hidden selected value=""></option>
+												<option v-for="producto in productosSeleccionados" :value="producto">
 													${producto.nombre}
 												</option>
 											</select>
 										</td>
 										<td>
-											<input required @change="precioProducto()" class="form-control" v-model="formPedidos.cantidadProducto" type="number" min="0" :max="formPedidos.productoSeleccionado.cantidad"/>
+											<input required @change="precioProducto()" class="form-control" 
+											v-model="formPedidos.cantidadProducto" type="number" 
+
+											@keypress="validarCodigo($event, 'codigo', 20)"
+											min="0" :max="formPedidos.productoSeleccionado.cantidad"/>
 										</td>
 										<td>
 											${precioUnitario}
@@ -232,17 +235,12 @@ endblock %}
 							</td>
 							<td>
 								<div v-if="!pedido.editar">${pedido.codigo}</div>
-								<input v-else-if="pedido.editar" class="form-control" 
-								v-model="pedido.codigo" 
-								type="text"
-								@keypress="validarCodigo($event,'pedido','codigo', 20)">
+								<input v-else-if="pedido.editar" class="form-control" v-model="pedido.codigo" type="text" @keypress="validarCodigo($event,'pedido','codigo', 20)">
 							</td>
 							<td style="width: 30%;">
 
 								<div v-if="!pedido.editar">${pedido.departamento}</div>
-								<select @change="cambioDepartamentoEditar(pedido)" class="form-select" v-else-if="pedido.editar"
-								 v-model="pedido.departamento" type="text" 
-								 style="width:50% ;">
+								<select @change="cambioDepartamentoEditar(pedido)" class="form-select" v-else-if="pedido.editar" v-model="pedido.departamento" type="text" style="width:50% ;">
 
 									<option hidden selected></option>
 									<option v-for="departamento in departamentos">
@@ -372,11 +370,20 @@ endblock %}
 						</table>
 
 
-						<div style="text-align:center; background-color:green; color:aliceblue"> 
-						
-						 Total Pedido:   ${this.pedidoModal.totalPedido}
-						
+						<div style="text-align:center; background-color:green; color:aliceblue">
+
+							Total Pedido:   ${pedidoModal.totalPedido}
 						</div>
+
+						<br>
+						<br>
+						<br>
+								<div style="text-align:center ;">
+								<button @click="plantilla" class="btn btn-success">
+									Exportar a Excel</button>
+							</div>
+
+
 
 					</div>
 					<div class="modal-footer">
