--- a/practica2/templates/base.html.twig
+++ b/practica2/templates/base.html.twig
@@ -44,6 +44,9 @@
 					<div class="col-2">
 						<a class="nav-link" href="/producto">Administrar Productos</a>
 					</div>
+					<div class="col-2">
+						<a class="nav-link" href="/pedido">Gestionar Pedidos</a>
+					</div>
 				</div>
 			</nav>
 		</div>
@@ -54,7 +57,7 @@
 				<nav class="navbar navbar-dark bg-dark">
 					<div class="row" style="color:white;width:100%">
 						<div class="col-6">
-							<h4>Footer</h4>
+							<h4>Diana Salazar</h4>
 						</div>
 					</div>
 				</nav>
