--- a/practica2/templates/cliente/cliente.html.twig
+++ b/practica2/templates/cliente/cliente.html.twig
@@ -50,7 +50,7 @@ const crearProducto = "{{ path('crearProducto') }}";
 					<button @click="nuevoCliente(1)" class="btn btn-success">Crear Cliente</button>
 				</div>
 				<div class="col-6" style="text-align:right;">
-					<a href="/pedido" type="button" class="btn btn-info">Gestionar Pedidos</a>
+					<a href="/pedido" type="button" class="btn btn-primary">Gestionar Pedidos</a>
 				</div>
 			</div>
 
@@ -105,7 +105,6 @@ const crearProducto = "{{ path('crearProducto') }}";
 							</select>
 						</td>
 
-						<td></td>
 						<td colspan="3">
 							<button @click="crearCliente" class="btn btn-success">Crear</button>
 							<button @click="nuevoCliente(0)" class="btn btn-danger">Cancelar</button>
