--- a/practica2/templates/pedido/pedido.html.twig
+++ b/practica2/templates/pedido/pedido.html.twig
@@ -61,7 +61,7 @@ let conse = 0;
 			<br>
 			<div v-if=" formPedidos.cliente != ''   ">
 				<div class="contenedor">
-					<div class="card">
+					<div class="card" style="background-color:#F0F9F6;box-shadow:-6px -6px 20px rgba(255, 255, 255,1),6px 6px 20px rgba(0, 0, 0, .1);">
 						<div class="row" style="text-align:center;margin:1%">
 							<div class="col-12">
 								<br>
@@ -139,11 +139,7 @@ let conse = 0;
 											</select>
 										</td>
 										<td>
-											<input required @change="precioProducto()" class="form-control" 
-											v-model="formPedidos.cantidadProducto" type="number" 
-
-											@keypress="validarCodigo($event, 'codigo', 20)"
-											min="0" :max="formPedidos.productoSeleccionado.cantidad"/>
+											<input required @change="precioProducto()" class="form-control" v-model="formPedidos.cantidadProducto" type="number" @keypress="validarCodigo($event, 'codigo', 20)" min="0" :max="formPedidos.productoSeleccionado.cantidad"/>
 										</td>
 										<td>
 											${precioUnitario}
@@ -377,12 +373,23 @@ let conse = 0;
 
 						<br>
 						<br>
-						<br>
-								<div style="text-align:center ;">
+						
+						<div class="row">
+
+							<div class="col-6" style="text-align:center ;">
 								<button @click="plantilla" class="btn btn-success">
 									Exportar a Excel</button>
 							</div>
 
+							<div class="col-6" style="text-align:center ;">
+								<button @click="enviarCorreo" style="color:#F5F5F5" class="btn btn-primary">
+									Enviar Email</button>
+							</div>
+
+						</div>
+
+
+					
 
 
 					</div>
