--- a/practica2/templates/base.html.twig
+++ b/practica2/templates/base.html.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Welcome!
+			{% block title %}Practica
 			{% endblock %}
 		</title>
 		<link
